src/objects/Unit_Event_History__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Unit Event History</relationshipLabel>
        <relationshipName>Unit_Event_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Unit Event History</relationshipLabel>
        <relationshipName>Unit_Event_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Unit Event History (Project Unit)</relationshipLabel>
        <relationshipName>Unit_Event_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <formula>Booking__r.Effective_From__c</formula>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Unit Event History</relationshipLabel>
        <relationshipName>Unit_Event_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesRefundHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesRefundHeader</label>
        <referenceTo>SalesRefundHeader__c</referenceTo>
        <relationshipLabel>Unit Event History</relationshipLabel>
        <relationshipName>Unit_Event_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit Event History</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Unit Event History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Event History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>